syntax = "proto3";

option java_outer_classname = "InventoryProto";

package com.smartretail;

service InventoryService {
  rpc getProductInfo (ProductRequest) returns (ProductResponse);
}

message ProductRequest {
  string productId = 1;
}

message ProductResponse {
  string productId = 1;
  string productName = 2;
  double price = 3;
  int32 quantity = 4;
}